5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/223/users/4187/executions/1680_1932.log
== TEST (2019-05-01 12:26:44) 
-- CODE:
do1 = float(input("distancia entre  os olhos, da imagem 1:"))
dnq1 = float(input("distancia entre o nariz e o queixo, da imagem 1:"))
do2 = float(input("distancia entre  os olhos, da imagem 2:"))
dnq2 = float(input("distancia entre o nariz e o queixo, da imagem 2:"))
do3 = float(input("distancia entre  os olhos, da imagem 3:"))
dnq3 = float(input("distancia entre o nariz e o queixo, da imagem 3:"))

# "face" é Razao entre duas medidas: diastanca entre os olhos e  a distancia entre o nariz e o queixo
face1 = do1/dnq1
face2 = do2/dnq2
face3 = do3/dnq3
print(face3)

-- OUTPUT:
1.0606060606060606
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-01 12:28:37) 
-- CODE:
do1 = float(input("distancia entre  os olhos, da imagem 1:"))
dnq1 = float(input("distancia entre o nariz e o queixo, da imagem 1:"))
do2 = float(input("distancia entre  os olhos, da imagem 2:"))
dnq2 = float(input("distancia entre o nariz e o queixo, da imagem 2:"))
do3 = float(input("distancia entre  os olhos, da imagem 3:"))
dnq3 = float(input("distancia entre o nariz e o queixo, da imagem 3:"))

# "face" é Razao entre duas medidas: diastanca entre os olhos e  a distancia entre o nariz e o queixo
face1 = do1/dnq1
face2 = do2/dnq2
face3 = do3/dnq3
print(round(face3,2))

-- OUTPUT:
1.06
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-01 13:30:41) 
-- CODE:
do1 = float(input("distancia entre  os olhos, da imagem 1:"))
dnq1 = float(input("distancia entre o nariz e o queixo, da imagem 1:"))
do2 = float(input("distancia entre  os olhos, da imagem 2:"))
dnq2 = float(input("distancia entre o nariz e o queixo, da imagem 2:"))
do3 = float(input("distancia entre  os olhos, da imagem 3:"))
dnq3 = float(input("distancia entre o nariz e o queixo, da imagem 3:"))

# "face" é Razao entre duas medidas: diastanca entre os olhos e  a distancia entre o nariz e o queixo
face1 = do1/dnq1
face2 = do2/dnq2
face3 = do3/dnq3

#comparacao de difenca entre as faces
#face1
comp12 = abs(face1 - face2)
comp13 = abs(face1 - face3)
#face2
comp21 = abs(face2 - )



print(round(face3,2))

-- ERROR:
File "XXXX", line 18
    comp21 = abs(face2 - )
                         ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-01 13:35:07) 
-- CODE:
do1 = float(input("distancia entre  os olhos, da imagem 1:"))
dnq1 = float(input("distancia entre o nariz e o queixo, da imagem 1:"))
do2 = float(input("distancia entre  os olhos, da imagem 2:"))
dnq2 = float(input("distancia entre o nariz e o queixo, da imagem 2:"))
do3 = float(input("distancia entre  os olhos, da imagem 3:"))
dnq3 = float(input("distancia entre o nariz e o queixo, da imagem 3:"))

# "face" é Razao entre duas medidas: diastanca entre os olhos e  a distancia entre o nariz e o queixo
face1 = do1/dnq1
face2 = do2/dnq2
face3 = do3/dnq3

#comparacao de difenca entre as faces
comp12 = abs(face1 - face2)
comp13 = abs(face1 - face3)
comp23 = abs(face2 - face3)






print(round(face3,2))

-- OUTPUT:
1.06
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-01 13:35:14) 
-- CODE:
do1 = float(input("distancia entre  os olhos, da imagem 1:"))
dnq1 = float(input("distancia entre o nariz e o queixo, da imagem 1:"))
do2 = float(input("distancia entre  os olhos, da imagem 2:"))
dnq2 = float(input("distancia entre o nariz e o queixo, da imagem 2:"))
do3 = float(input("distancia entre  os olhos, da imagem 3:"))
dnq3 = float(input("distancia entre o nariz e o queixo, da imagem 3:"))

# "face" é Razao entre duas medidas: diastanca entre os olhos e  a distancia entre o nariz e o queixo
face1 = do1/dnq1
face2 = do2/dnq2
face3 = do3/dnq3

#comparacao de difenca entre as faces
comp12 = abs(face1 - face2)
comp13 = abs(face1 - face3)
comp23 = abs(face2 - face3)






print(round(face3,2))

-- OUTPUT:
1.06
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-01 13:41:45) 
-- CODE:
do1 = float(input("distancia entre  os olhos, da imagem 1:"))
dnq1 = float(input("distancia entre o nariz e o queixo, da imagem 1:"))
do2 = float(input("distancia entre  os olhos, da imagem 2:"))
dnq2 = float(input("distancia entre o nariz e o queixo, da imagem 2:"))
do3 = float(input("distancia entre  os olhos, da imagem 3:"))
dnq3 = float(input("distancia entre o nariz e o queixo, da imagem 3:"))

# "face" é Razao entre duas medidas: diastanca entre os olhos e  a distancia entre o nariz e o queixo
face1 = do1/dnq1
face2 = do2/dnq2
face3 = do3/dnq3

#comparacao de difenca entre as faces
comp12 = abs(face1 - face2)
comp13 = abs(face1 - face3)
comp23 = abs(face2 - face3)
mini = min(comp12,comp13,comp23)
maxm = max(comp12,comp13,comp23)

print(mini,","maxm)





print(round(face3,2))

-- ERROR:
File "XXXX", line 20
    print(mini,","maxm)
                     ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-01 13:42:02) 
-- CODE:
do1 = float(input("distancia entre  os olhos, da imagem 1:"))
dnq1 = float(input("distancia entre o nariz e o queixo, da imagem 1:"))
do2 = float(input("distancia entre  os olhos, da imagem 2:"))
dnq2 = float(input("distancia entre o nariz e o queixo, da imagem 2:"))
do3 = float(input("distancia entre  os olhos, da imagem 3:"))
dnq3 = float(input("distancia entre o nariz e o queixo, da imagem 3:"))

# "face" é Razao entre duas medidas: diastanca entre os olhos e  a distancia entre o nariz e o queixo
face1 = do1/dnq1
face2 = do2/dnq2
face3 = do3/dnq3

#comparacao de difenca entre as faces
comp12 = abs(face1 - face2)
comp13 = abs(face1 - face3)
comp23 = abs(face2 - face3)
mini = min(comp12,comp13,comp23)
maxm = max(comp12,comp13,comp23)

print(mini)





print(round(face3,2))

-- OUTPUT:
0.0028860028860029363
1.06
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-01 13:47:25) 
-- CODE:
do1 = float(input("distancia entre  os olhos, da imagem 1:"))
dnq1 = float(input("distancia entre o nariz e o queixo, da imagem 1:"))
do2 = float(input("distancia entre  os olhos, da imagem 2:"))
dnq2 = float(input("distancia entre o nariz e o queixo, da imagem 2:"))
do3 = float(input("distancia entre  os olhos, da imagem 3:"))
dnq3 = float(input("distancia entre o nariz e o queixo, da imagem 3:"))

# "face" é Razao entre duas medidas: diastanca entre os olhos e  a distancia entre o nariz e o queixo
face1 = do1/dnq1
face2 = do2/dnq2
face3 = do3/dnq3

#comparacao de difenca entre as faces
comp12 = abs(face1 - face2)
comp13 = abs(face1 - face3)
comp23 = abs(face2 - face3)
mini = min(comp12,comp13,comp23)
maxm = max(comp12,comp13,comp23)

print(mini)





print(round(face3,2))

-- OUTPUT:
0.0028860028860029363
1.06
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-01 13:59:28) 
-- CODE:
do1 = float(input("distancia entre  os olhos, da imagem 1:"))
dnq1 = float(input("distancia entre o nariz e o queixo, da imagem 1:"))
do2 = float(input("distancia entre  os olhos, da imagem 2:"))
dnq2 = float(input("distancia entre o nariz e o queixo, da imagem 2:"))
do3 = float(input("distancia entre  os olhos, da imagem 3:"))
dnq3 = float(input("distancia entre o nariz e o queixo, da imagem 3:"))

# "face" é Razao entre duas medidas: diastanca entre os olhos e  a distancia entre o nariz e o queixo
face1 = do1/dnq1
face2 = do2/dnq2
face3 = do3/dnq3

#comparacao de difenca entre as faces
comp12 = abs(face1 - face2)
comp13 = abs(face1 - face3)
comp23 = abs(face2 - face3)

menorDiferenca = min(comp12,comp13,comp23)
if(menorDiferenca == comp12):
	print("1 e 2")
elif(menorDiferenca == comp13):
	print("1 e 3")
elif(menorDiferenca == comp23):
	print("2 e 3")








-- OUTPUT:
1 e 3
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-01 13:59:40) 
-- CODE:
do1 = float(input("distancia entre  os olhos, da imagem 1:"))
dnq1 = float(input("distancia entre o nariz e o queixo, da imagem 1:"))
do2 = float(input("distancia entre  os olhos, da imagem 2:"))
dnq2 = float(input("distancia entre o nariz e o queixo, da imagem 2:"))
do3 = float(input("distancia entre  os olhos, da imagem 3:"))
dnq3 = float(input("distancia entre o nariz e o queixo, da imagem 3:"))

# "face" é Razao entre duas medidas: diastanca entre os olhos e  a distancia entre o nariz e o queixo
face1 = do1/dnq1
face2 = do2/dnq2
face3 = do3/dnq3

#comparacao de difenca entre as faces
comp12 = abs(face1 - face2)
comp13 = abs(face1 - face3)
comp23 = abs(face2 - face3)

menorDiferenca = min(comp12,comp13,comp23)
if(menorDiferenca == comp12):
	print("1 e 2")
elif(menorDiferenca == comp13):
	print("1 e 3")
elif(menorDiferenca == comp23):
	print("2 e 3")








-- OUTPUT:
1 e 3
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-01 14:03:53) 
-- CODE:
do1 = float(input("distancia entre  os olhos, da imagem 1:"))
dnq1 = float(input("distancia entre o nariz e o queixo, da imagem 1:"))
do2 = float(input("distancia entre  os olhos, da imagem 2:"))
dnq2 = float(input("distancia entre o nariz e o queixo, da imagem 2:"))
do3 = float(input("distancia entre  os olhos, da imagem 3:"))
dnq3 = float(input("distancia entre o nariz e o queixo, da imagem 3:"))

# "face" é Razao entre duas medidas: diastanca entre os olhos e  a distancia entre o nariz e o queixo
face1 = do1/dnq1
face2 = do2/dnq2
face3 = do3/dnq3

#comparacao de difenca entre as faces
comp12 = abs(face1 - face2)
comp13 = abs(face1 - face3)
comp23 = abs(face2 - face3)

menorDiferenca = min(comp12,comp13,comp23)
if(menorDiferenca == comp12):
	print("1 e 2")
elif(menorDiferenca == comp13):
	print("1 e 3")
elif(menorDiferenca == comp23):
	print("2 e 3")








-- EXECUTION TIME:
0.15766
-- TEST CASE 1:
---- input:
6.7
6.3
7.0
4.0
7.0
6.6
---- correct output:
1 e 3
---- user output:
1 e 3
-- TEST CASE 2:
---- input:
1.0
2.0
3.0
6.0
8.0
10.0
---- correct output:
1 e 2
---- user output:
1 e 2
-- TEST CASE 3:
---- input:
20.0
30.0
5.0
10.0
5.0
10.0
---- correct output:
2 e 3
---- user output:
2 e 3
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
